Fix table alignment to the center of the screen
Update table style

Add utils file

    contains the RepeatedTimer class

Change table update process

    there is some sync issue when updating the DataTable with a thread.
    wrapping the update function with the App.call_from_thread function
    seems to solve the problem for now

--- a/termcs/termcs.css
+++ b/termcs/termcs.css
@@ -33,30 +33,61 @@ Clock {
     content-align: center middle;
 }
 
-Static #assets, Static #eta {
+#center_wrapper{
+    /* border: solid red; */
     width: 100%;
+    height: 100%;
+    align: center middle;
+}
+
+#asset_count_label{
+    width: auto;
+    margin-top: 1;
     content-align: center middle;
 }
 
-ChangeTable {
-
-    height: 100%;
-    width: 100%;
-    /* border: solid red; */
-    align: center middle;
+#eta_label {
+    width: auto;
+    margin-bottom: 1;
+    content-align: center middle;
 }
 
 DataTable {
-    background: $surface;
+    background: $background;
     color: $text;
     align: center middle;
+    width: 100%;
+    /* width: auto; */
+    height: 91%;
+    /* height: auto; */
+    text-opacity: 85%;
+    align: center middle;
+}
 
-    /* width: 100%; */
+DataTable > .datatable--header {
+    text-style: bold;
+    background: $primary-background 80%;
+    color: $text;
+}
+
+DataTable > .datatable--odd-row {
+    background: $surface 40%;
+}
+
+DataTable > .datatable--even-row {
+    background: $surface 70%;
+}
+
+DataTable >  .datatable--cursor {
+    background: $secondary 45%;
+    color: $text;
+}
+
+ChangeTable {
     height: 100%;
     width: auto;
-    /* height: auto; */
-    border: solid red;
-    text-opacity: 85%;
+    /* width: 100%; */
+    color: $text;
     align: center middle;
 }
 
